Use different referable kinds for records and classes